--- a/Android/main/src/main/AndroidManifest.xml
+++ b/Android/main/src/main/AndroidManifest.xml
@@ -40,6 +40,19 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
+        <activity android:name=".EditBasicDisplay">
+            <intent-filter android:order="1">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="ubspy.com"
+                    android:pathPattern="/.*"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
